--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Trillo",
+  "name": "dots-spot",
   "version": "1.0.0",
-  "description": "trillo app",
+  "description": "Dots Spot's",
   "main": "index.js",
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
@@ -19,7 +19,6 @@
     "concat": "^1.0.3",
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.1",
-    "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1"
   }
 }
