--- a/package.json
+++ b/package.json
@@ -1,24 +1,57 @@
 {
-  "name": "dots-spot",
-  "version": "1.0.0",
-  "description": "Dots Spot's",
-  "main": "index.js",
-  "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
-    "devserver": "live-server",
-    "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
-    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass prefix:css compress:css"
+  "name": "owl.carousel",
+  "description": "Touch enabled jQuery plugin that lets you create beautiful responsive carousel slider.",
+  "version": "2.3.4",
+  "homepage": "https://github.com/OwlCarousel2/OwlCarousel2",
+  "main": "./dist/owl.carousel.js",
+  "style": "./dist/assets/owl.carousel.css",
+  "author": {
+    "name": "David Deutsch",
+    "email": "deutsch@medienpark.net",
+    "url": "https://owlcarousel2.github.io/OwlCarousel2"
   },
-  "author": "Jonas",
-  "license": "ISC",
+  "license": "SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE",
+  "bugs": {
+    "url": "https://github.com/OwlCarousel2/OwlCarousel2/issues",
+    "email": "deutsch@medienpark.net"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/OwlCarousel2/OwlCarousel2.git"
+  },
+  "dependencies": {
+    "jquery": ">=1.8.3"
+  },
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
-    "concat": "^1.0.3",
-    "node-sass": "^6.0.1",
-    "npm-run-all": "^4.1.1",
-    "postcss-cli": "^8.3.1"
-  }
+    "assemble": "~0.4.37",
+    "blanket": "^1.1.7",
+    "foundation-sites": "~5.5.2",
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-banner": "^0.4.0",
+    "grunt-blanket-qunit": "^0.2.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-compress": "~0.13.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-connect": "~0.10.1",
+    "grunt-contrib-copy": "~0.8.0",
+    "grunt-contrib-cssmin": "^0.12.3",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-qunit": ">=0.2.1",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.10.0",
+    "grunt-jscs": "~1.8.0",
+    "grunt-sass": "^1.0.0",
+    "load-grunt-tasks": "^3.2.0",
+    "pretty": "^1.0.0",
+    "qunitjs": "^1.18.0"
+  },
+  "keywords": [
+    "responsive",
+    "carousel",
+    "owlcarousel",
+    "jQuery",
+    "plugin"
+  ]
 }
